internal/render/testdata/nzbget/k8s/play/nzbget/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: nzbget
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6789
