internal/render/testdata/nzbget/k8s/play/nzbget/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: nzbget
    spec:
      containers:
        - name: nzbget
          image: docker.io/linuxserver/nzbget:v26.2-ls257
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6789
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
